tests/baselines/reference/generatorReturnExpressionIsChecked.errors.txt
tests/cases/compiler/generatorReturnExpressionIsChecked.ts(2,12): error TS2552: Cannot find name 'invalid'. Did you mean 'oninvalid'?


==== tests/cases/compiler/generatorReturnExpressionIsChecked.ts (1 errors) ====
    function* f(): Iterator<number> {
        return invalid;
               ~~~~~~~
!!! error TS2552: Cannot find name 'invalid'. Did you mean 'oninvalid'?
    }
    